--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"export": "next export",
 		"build-prod": "run-s clean build export",
 		"clean": "rimraf .next out",
-		"lint": "next lint",
+		"lint": "next lint --fix",
 		"build-types": "tsc --noEmit --pretty",
 		"prepare": "husky install",
 		"storybook": "start-storybook -p 6006 -s ./public",
@@ -35,6 +35,7 @@
 		"@babel/core": "^7.17.9",
 		"@chakra-ui/storybook-addon": "^1.0.3",
 		"@next/bundle-analyzer": "^12.1.4",
+		"@next/eslint-plugin-next": "^12.1.5",
 		"@storybook/addon-actions": "^6.4.22",
 		"@storybook/addon-essentials": "^6.4.22",
 		"@storybook/addon-interactions": "^6.4.22",
