--- a/package.json
+++ b/package.json
@@ -23,12 +23,17 @@
 		"@emotion/styled": "^11",
 		"@types/ramda": "^0.28.10",
 		"framer-motion": "^6",
+		"i18next": "^21.6.16",
+		"i18next-browser-languagedetector": "^6.1.4",
+		"i18next-http-backend": "^1.4.0",
+		"i18next-parser": "^6.3.0",
 		"immer": "^9.0.12",
 		"next": "^12.1.4",
 		"next-seo": "^5.4.0",
 		"ramda": "^0.28.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-i18next": "^11.16.6",
 		"zustand": "^3.7.2"
 	},
 	"devDependencies": {
