--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@ebay/nice-modal-react": "^1.2.4",
 		"@emotion/react": "^11",
 		"@emotion/styled": "^11",
+		"@react-google-maps/api": "^2.8.1",
 		"@types/ramda": "^0.28.10",
 		"framer-motion": "^6",
 		"i18next": "^21.6.16",
@@ -42,19 +43,19 @@
 	"devDependencies": {
 		"@babel/core": "^7.17.9",
 		"@chakra-ui/cli": "^1.9.0",
-		"@chakra-ui/storybook-addon": "^1.0.3",
+		"@chakra-ui/storybook-addon": "^2.0.0-next.1",
 		"@next/bundle-analyzer": "^12.1.4",
 		"@next/eslint-plugin-next": "^12.1.5",
-		"@storybook/addon-actions": "^6.4.22",
-		"@storybook/addon-essentials": "^6.4.22",
-		"@storybook/addon-interactions": "^6.4.22",
-		"@storybook/addon-links": "^6.4.22",
-		"@storybook/builder-webpack5": "^6.4.22",
-		"@storybook/manager-webpack5": "^6.4.22",
-		"@storybook/react": "^6.4.22",
-		"@storybook/testing-library": "^0.0.9",
+		"@storybook/addon-actions": "^6.5.0-alpha.64",
+		"@storybook/addon-essentials": "^6.5.0-alpha.64",
+		"@storybook/addon-interactions": "^6.5.0-alpha.64",
+		"@storybook/addon-links": "^6.5.0-alpha.64",
+		"@storybook/builder-webpack5": "^6.5.0-alpha.64",
+		"@storybook/manager-webpack5": "^6.5.0-alpha.64",
+		"@storybook/react": "^6.5.0-alpha.64",
+		"@storybook/testing-library": "^0.0.10",
 		"@types/node": "^17.0.23",
-		"@types/react": "^17.0.44",
+		"@types/react": "17.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.18.0",
 		"@typescript-eslint/parser": "^5.18.0",
 		"autoprefixer": "^10.4.4",
@@ -82,5 +83,9 @@
 		"tailwindcss": "^3.0.23",
 		"typescript": "^4.6.3"
 	},
-	"license": "ISC"
+	"license": "ISC",
+	"resolutions": {
+		"@types/react": "17.0.2",
+		"@types/react-dom": "17.0.2"
+	}
 }
