--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@emotion/react": "^11",
 		"@emotion/styled": "^11",
 		"@types/ramda": "^0.28.10",
+		"chakra-ui-steps": "^1.7.2",
 		"framer-motion": "^6",
 		"from": "^0.1.7",
 		"i18next": "^21.6.16",
@@ -38,6 +39,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-i18next": "^11.16.6",
+		"react-slick": "^0.29.0",
 		"zustand": "^3.7.2"
 	},
 	"devDependencies": {
@@ -56,6 +58,7 @@
 		"@storybook/testing-library": "^0.0.9",
 		"@types/node": "^17.0.23",
 		"@types/react": "^17.0.44",
+		"@types/react-slick": "^0.23.8",
 		"@typescript-eslint/eslint-plugin": "^5.18.0",
 		"@typescript-eslint/parser": "^5.18.0",
 		"autoprefixer": "^10.4.4",
