--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@emotion/styled": "^11",
 		"@react-google-maps/api": "^2.8.1",
 		"@types/ramda": "^0.28.10",
+		"axios": "^0.26.1",
 		"framer-motion": "^6",
 		"i18next": "^21.6.16",
 		"i18next-browser-languagedetector": "^6.1.4",
@@ -37,7 +38,9 @@
 		"ramda": "^0.28.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-hook-form": "^7.30.0",
 		"react-i18next": "^11.16.6",
+		"zod": "^3.14.4",
 		"zustand": "^3.7.2"
 	},
 	"devDependencies": {
