--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@hookform/resolvers": "^2.8.8",
     "@react-google-maps/api": "^2.8.1",
     "@types/ramda": "^0.28.10",
+    "@types/react-slick": "^0.23.8",
     "axios": "^0.26.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -48,6 +49,8 @@
     "react-input-mask": "^3.0.0-alpha.2",
     "react-mask-field": "^3.0.1",
     "react-query": "^3.38.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "zod": "^3.14.4",
     "zustand": "^3.7.2"
   },
