--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"react-query": "^3.38.0",
 		"react-slick": "^0.29.0",
 		"slick-carousel": "^1.8.1",
+		"swiper": "^8.1.4",
 		"zod": "^3.14.4",
 		"zustand": "^3.7.2"
 	},
