--- a/package.json
+++ b/package.json
@@ -1,114 +1,113 @@
 {
-	"name": "next-js-boilerplate",
-	"version": "1.0.0",
-	"scripts": {
-		"dev": "next dev",
-		"dev:mock": "cross-env NEXT_PUBLIC_ENV=mock next dev",
-		"build": "next build",
-		"start": "next start",
-		"build-stats": "cross-env ANALYZE=true npm run build",
-		"export": "next export",
-		"build-prod": "run-s clean build export",
-		"clean": "rimraf .next out",
-		"lint": "next lint --fix",
-		"build-types": "tsc --noEmit --pretty",
-		"prepare": "husky install",
-		"storybook": "start-storybook -p 6006 -s ./public",
-		"build-storybook": "build-storybook -s public",
-		"gen:component": "plop",
-		"gen:theme": "chakra-cli tokens src/theme/chakraTheme.ts",
-		"postinstall": "yarn gen:theme"
-	},
-	"dependencies": {
-		"@chakra-ui/icons": "^1.1.7",
-		"@chakra-ui/react": "^1.8.8",
-		"@ebay/nice-modal-react": "^1.2.4",
-		"@emotion/react": "^11",
-		"@emotion/styled": "^11",
-		"@hookform/resolvers": "^2.8.8",
-		"@react-google-maps/api": "^2.8.1",
-		"@types/ramda": "^0.28.10",
-		"@types/react-slick": "^0.23.8",
-		"axios": "^0.26.1",
-		"chakra-ui-steps": "^1.7.2",
-		"class-transformer": "^0.5.1",
-		"class-validator": "^0.13.2",
-		"framer-motion": "^6",
-		"from": "^0.1.7",
-		"i18next": "^21.6.16",
-		"i18next-browser-languagedetector": "^6.1.4",
-		"i18next-http-backend": "^1.4.0",
-		"i18next-parser": "^6.3.0",
-		"immer": "^9.0.12",
-		"lottie-react-web": "^2.2.2",
-		"msw": "^0.39.2",
-		"next": "^12.1.4",
-		"next-seo": "^5.4.0",
-		"ramda": "^0.28.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-hook-form": "^7.30.0",
-		"react-i18next": "^11.16.6",
-		"react-input-mask": "^3.0.0-alpha.2",
-		"react-mask-field": "^3.0.1",
-		"react-query": "^3.38.0",
-		"react-slick": "^0.29.0",
-		"slick-carousel": "^1.8.1",
-		"swiper": "^8.1.4",
-		"zod": "^3.14.4",
-		"zustand": "^3.7.2"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.17.9",
-		"@chakra-ui/cli": "^1.9.0",
-		"@chakra-ui/storybook-addon": "^2.0.0-next.1",
-		"@hookform/devtools": "^4.1.0",
-		"@next/bundle-analyzer": "^12.1.4",
-		"@next/eslint-plugin-next": "^12.1.5",
-		"@storybook/addon-actions": "^6.5.0-alpha.64",
-		"@storybook/addon-essentials": "^6.5.0-alpha.64",
-		"@storybook/addon-interactions": "^6.5.0-alpha.64",
-		"@storybook/addon-links": "^6.5.0-alpha.64",
-		"@storybook/builder-webpack5": "^6.5.0-alpha.64",
-		"@storybook/manager-webpack5": "^6.5.0-alpha.64",
-		"@storybook/react": "^6.5.0-alpha.64",
-		"@storybook/testing-library": "^0.0.10",
-		"@types/node": "^17.0.23",
-		"@types/react": "17.0.2",
-		"@types/react-input-mask": "^3.0.1",
-		"@typescript-eslint/eslint-plugin": "^5.18.0",
-		"@typescript-eslint/parser": "^5.18.0",
-		"autoprefixer": "^10.4.4",
-		"babel-loader": "^8.2.4",
-		"cross-env": "^7.0.3",
-		"cssnano": "^5.1.7",
-		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-import-resolver-typescript": "^2.4.0",
-		"eslint-plugin-cypress": "^2.11.3",
-		"eslint-plugin-import": "^2.23.4",
-		"eslint-plugin-jest-dom": "^3.9.0",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-prettier": "^3.4.0",
-		"eslint-plugin-react": "^7.24.0",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"eslint-plugin-testing-library": "^4.12.4",
-		"husky": "^7.0.4",
-		"lint-staged": "^12.3.7",
-		"npm-run-all": "^4.1.5",
-		"plop": "^3.0.5",
-		"postcss": "^8.4.12",
-		"prettier": "^2.6.2",
-		"rimraf": "^3.0.2",
-		"tailwindcss": "^3.0.23",
-		"typescript": "^4.6.3"
-	},
-	"license": "ISC",
-	"resolutions": {
-		"@types/react": "17.0.2",
-		"@types/react-dom": "17.0.2"
-	},
-	"msw": {
-		"workerDirectory": "public"
-	}
+  "name": "next-js-boilerplate",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "next dev",
+    "dev:mock": "cross-env NEXT_PUBLIC_ENV=mock next dev",
+    "build": "next build",
+    "start": "next start",
+    "build-stats": "cross-env ANALYZE=true npm run build",
+    "export": "next export",
+    "build-prod": "run-s clean build export",
+    "clean": "rimraf .next out",
+    "lint": "next lint --fix",
+    "build-types": "tsc --noEmit --pretty",
+    "prepare": "husky install",
+    "storybook": "start-storybook -p 6006 -s ./public",
+    "build-storybook": "build-storybook -s public",
+    "gen:component": "plop",
+    "gen:theme": "chakra-cli tokens src/theme/chakraTheme.ts"
+  },
+  "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "^1.8.8",
+    "@ebay/nice-modal-react": "^1.2.4",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@hookform/resolvers": "^2.8.8",
+    "@react-google-maps/api": "^2.8.1",
+    "@types/ramda": "^0.28.10",
+    "@types/react-slick": "^0.23.8",
+    "axios": "^0.26.1",
+    "chakra-ui-steps": "^1.7.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "framer-motion": "^6",
+    "from": "^0.1.7",
+    "i18next": "^21.6.16",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.0",
+    "i18next-parser": "^6.3.0",
+    "immer": "^9.0.12",
+    "lottie-react-web": "^2.2.2",
+    "msw": "^0.39.2",
+    "next": "^12.1.4",
+    "next-seo": "^5.4.0",
+    "ramda": "^0.28.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.30.0",
+    "react-i18next": "^11.16.6",
+    "react-input-mask": "^3.0.0-alpha.2",
+    "react-mask-field": "^3.0.1",
+    "react-query": "^3.38.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^8.1.4",
+    "zod": "^3.14.4",
+    "zustand": "^3.7.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@chakra-ui/cli": "^1.9.0",
+    "@chakra-ui/storybook-addon": "^2.0.0-next.1",
+    "@hookform/devtools": "^4.1.0",
+    "@next/bundle-analyzer": "^12.1.4",
+    "@next/eslint-plugin-next": "^12.1.5",
+    "@storybook/addon-actions": "^6.5.0-alpha.64",
+    "@storybook/addon-essentials": "^6.5.0-alpha.64",
+    "@storybook/addon-interactions": "^6.5.0-alpha.64",
+    "@storybook/addon-links": "^6.5.0-alpha.64",
+    "@storybook/builder-webpack5": "^6.5.0-alpha.64",
+    "@storybook/manager-webpack5": "^6.5.0-alpha.64",
+    "@storybook/react": "^6.5.0-alpha.64",
+    "@storybook/testing-library": "^0.0.10",
+    "@types/node": "^17.0.23",
+    "@types/react": "17.0.2",
+    "@types/react-input-mask": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "autoprefixer": "^10.4.4",
+    "babel-loader": "^8.2.4",
+    "cross-env": "^7.0.3",
+    "cssnano": "^5.1.7",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-cypress": "^2.11.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest-dom": "^3.9.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testing-library": "^4.12.4",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.7",
+    "npm-run-all": "^4.1.5",
+    "plop": "^3.0.5",
+    "postcss": "^8.4.12",
+    "prettier": "^2.6.2",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.6.3"
+  },
+  "license": "ISC",
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
+  }
 }
