--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"build": "next build",
 		"build:html": "next build && next export",
 		"start": "next start",
+		"test": "jest --watch --no-cache",
+		"test:ci": "jest --ci",
 		"build-stats": "cross-env ANALYZE=true npm run build",
 		"export": "next export",
 		"build-prod": "run-s clean build export",
@@ -51,13 +53,14 @@
 		"react-hook-form": "^7.30.0",
 		"react-i18next": "^11.16.6",
 		"react-input-mask": "^3.0.0-alpha.2",
+		"react-intersection-observer": "^9.2.2",
 		"react-mask-field": "^3.0.1",
 		"react-query": "^3.38.0",
 		"react-slick": "^0.29.0",
 		"slick-carousel": "^1.8.1",
 		"swiper": "^8.1.4",
 		"zod": "^3.14.4",
-		"zustand": "^3.7.2"
+		"zustand": "3.7.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.17.9",
@@ -74,9 +77,17 @@
 		"@storybook/manager-webpack5": "^6.5.0-alpha.64",
 		"@storybook/react": "^6.5.0-alpha.64",
 		"@storybook/testing-library": "^0.0.10",
+		"@testing-library/dom": "^8.13.0",
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "12.1.5",
+		"@testing-library/react-hooks": "^8.0.0",
+		"@testing-library/user-event": "^14.2.0",
+		"@types/": "testing-library/jest-dom",
+		"@types/jest": "^28.1.0",
 		"@types/node": "^17.0.23",
 		"@types/react": "17.0.2",
 		"@types/react-input-mask": "^3.0.1",
+		"@types/testing-library__jest-dom": "^5.14.3",
 		"@typescript-eslint/eslint-plugin": "^5.18.0",
 		"@typescript-eslint/parser": "^5.18.0",
 		"autoprefixer": "^10.4.4",
@@ -95,6 +106,9 @@
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"eslint-plugin-testing-library": "^4.12.4",
 		"husky": "^7.0.4",
+		"jest": "^28.1.0",
+		"jest-canvas-mock": "^2.4.0",
+		"jest-environment-jsdom": "^28.1.0",
 		"lint-staged": "^12.3.7",
 		"npm-run-all": "^4.1.5",
 		"plop": "^3.0.5",
@@ -102,6 +116,8 @@
 		"prettier": "^2.6.2",
 		"rimraf": "^3.0.2",
 		"tailwindcss": "^3.0.23",
+		"tsconfig-paths": "^4.0.0",
+		"tsconfig-paths-jest": "^0.0.1",
 		"typescript": "^4.6.3"
 	},
 	"license": "ISC",
